# proto-ray

./: App.cpp  App.h  CMakeLists.txt  main.cpp  vcpkg.json
proto/: Image.cpp  Image.h  Transform.h  Types.cpp  Types.h  proto.h
